# server/src/main/java/edu/cnm/deepdive/coffeeshop/model/entity/Profile.java
@@ -1,10 +1,14 @@
 package edu.cnm.deepdive.coffeeshop.model.entity;
 
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.OrderBy;
 import jakarta.persistence.Table;
@@ -38,8 +42,12 @@ public class Profile {
   @OrderBy("createdAt desc")
   private Set<Visit> visits = new LinkedHashSet<>();
 
-  @OneToMany(mappedBy = "profile", fetch = FetchType.EAGER)
-  private Set<Favorite> favorites = new LinkedHashSet<>();
+  @ManyToMany(fetch = FetchType.EAGER, cascade = {CascadeType.DETACH, CascadeType.MERGE,
+      CascadeType.PERSIST, CascadeType.REFRESH})
+  @JoinTable(name = "favorite", joinColumns = @JoinColumn(name = "profile_id"),
+      inverseJoinColumns = @JoinColumn(name = "shop_id"))
+  @OrderBy("name ASC")
+  private final Set<Shop> favorites = new LinkedHashSet<>();
 
   @OneToMany(mappedBy = "profile", fetch = FetchType.EAGER)
   private Set<Preference> preferences = new LinkedHashSet<>();
@@ -92,12 +100,8 @@ public class Profile {
     this.visits = visits;
   }
 
-  public Set<Favorite> getFavorites() {
+  public Set<Shop> getFavorites() {
     return favorites;
-  }
-
-  public void setFavorites(Set<Favorite> favorites) {
-    this.favorites = favorites;
   }
 
   public Set<Preference> getPreferences() {
