# server/src/main/java/edu/cnm/deepdive/coffeeshop/service/FavoriteServiceImpl.java
@@ -1,12 +1,11 @@
 package edu.cnm.deepdive.coffeeshop.service;
 
-import edu.cnm.deepdive.coffeeshop.model.entity.Favorite;
-import edu.cnm.deepdive.coffeeshop.model.entity.FavoriteId;
 import edu.cnm.deepdive.coffeeshop.model.entity.Profile;
 import edu.cnm.deepdive.coffeeshop.model.entity.Shop;
-import edu.cnm.deepdive.coffeeshop.repository.FavoriteRepository;
 import edu.cnm.deepdive.coffeeshop.repository.ProfileRepository;
+import edu.cnm.deepdive.coffeeshop.repository.ShopRepository;
 import java.util.Set;
+import java.util.UUID;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -14,40 +13,40 @@ import org.springframework.stereotype.Service;
 public class FavoriteServiceImpl implements FavoriteService {
 
   private final ProfileRepository profileRepository;
-  private final FavoriteRepository favoriteRepository;
+  private final ShopRepository shopRepository;
 
   @Autowired
   public FavoriteServiceImpl(ProfileRepository profileRepository,
-      FavoriteRepository favoriteRepository) {
+      ShopRepository shopRepository) {
     this.profileRepository = profileRepository;
-    this.favoriteRepository = favoriteRepository;
+    this.shopRepository = shopRepository;
   }
 
   @Override
-  public Set<Favorite> getFavorites(Profile profile) {
+  public Set<Shop> getFavorites(Profile profile) {
     return profile.getFavorites();
   }
 
   @Override
-  public void saveFavorite(Shop shop, Profile profile) {
-    Favorite favorite = new Favorite();
-    favorite.setShop(shop);
-    favorite.setProfile(profile);
-    profileRepository.save(profile);
+  public void saveFavorite(UUID shopId, Profile profile) {
+    shopRepository.findById(shopId)
+        .map((shop) -> profileRepository.findById(profile.getId())
+            .map((p) -> {
+              p.getFavorites().add(shop);
+              return profileRepository.save(p);
+            }))
+        .orElseThrow();
   }
 
   @Override
-  public void removeFavorite(Shop shop, Profile profile) {
-    FavoriteId favoriteId = new FavoriteId(profile.getId(), shop.getId());
-    // TODO: 7/30/26 Explore simplification.
-    favoriteRepository.findById(favoriteId)
-        .map((favorite) -> {
-          Profile updatedProfile = favorite.getProfile();
-          updatedProfile.getFavorites().remove(favorite);
-          profileRepository.save(updatedProfile);
-          favoriteRepository.delete(favorite);
-          return null;
-        });
+  public void removeFavorite(UUID shopId, Profile profile) {
+    shopRepository.findById(shopId)
+        .map((shop) -> profileRepository.findById(profile.getId())
+            .map((p) -> {
+              p.getFavorites().remove(shop);
+              return profileRepository.save(p);
+            }))
+        .orElseThrow();
   }
 
 }
